[package]
name = "abordage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.0"
axum = "0.5.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
geo = {version = "0.23.0", features = ["use-serde"]}
geozero = {version = "0.9.5", features = ["with-wkb", "with-geos"]}
geo-types = { version = "0.7" }
geos = { version = "8.0", optional = true }
tokio = { version = "1.21.2", features = ["full"] }

[dependencies.sqlx]
version = "0.6.2"
features = ["macros", "migrate", "offline", "postgres", "json", "runtime-tokio-native-tls"]
