[package]
name = "spawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = {version = "0.6", features = ["runtime-async-std-native-tls", "postgres"]}

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]