[package]
name = "abordage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.0"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["macros", "migrate", "postgres", "runtime-async-std-native-tls"]

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.rocket_db_pools]
features = ["sqlx_postgres"]